@@ -1,3 +1,4 @@
+Build a Mixed Fraction: Numbers: Made it possible to show mixed numbers for targets
 Build a Mixed Fraction: Added more support for mixed numbers
 Build a Mixed Fraction: Updated title and internationalized tab name
 # 1.00.38 (66957) Aug 14, 2012
